--- a/style.css
+++ b/style.css
@@ -18,6 +18,6 @@ svg {
       position: absolute;
       height: 6000px;
       width: 100px;
-      top: 0;
+       top: 0; /*100%; */
       z-index: 0;
 }
